# energyhistorian

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PLAN-ai-ready-metadata.md  README.md  aemo-market-questions.md  architecture-options.md  compose.yaml  nem-questions.txt  pyproject.toml
.github/workflows/: deploy.yml  frontend-build.yml
apps/ai-api/: Cargo.toml  Dockerfile  README.md  rules.md
apps/ai-api/migrations/: 0001_init.sql
apps/ai-api/src/: auth.rs  billing.rs  clickhouse.rs  config.rs  db.rs  error.rs  llm.rs  main.rs  models.rs  pipeline.rs  prompts.rs  state.rs
apps/downloaderd/: Cargo.toml
apps/downloaderd/src/: main.rs
apps/energyhistoriand/: Cargo.toml
apps/energyhistoriand/src/: main.rs  schedule_state.rs  scheduler.rs
apps/parserd/: Cargo.toml
apps/parserd/src/: main.rs
apps/reconcile-semantics/: Cargo.toml
apps/reconcile-semantics/src/: main.rs
apps/schedulerd/: Cargo.toml
apps/schedulerd/src/: main.rs
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json
apps/web/nginx/: default.conf  entrypoint.sh
apps/web/public/: config.js
apps/web/src/: App.tsx  api.ts  auth.tsx  config.ts  index.css  main.tsx  plotly.d.ts  types.ts  vite-env.d.ts
crates/energyhistoriand/: Cargo.toml
crates/energyhistoriand/src/: main.rs  pipeline.rs  schedule_state.rs  scheduler.rs  warehouse.rs
crates/ingest-core/: Cargo.toml
crates/ingest-core/src/: artifact.rs  lib.rs  nem_time.rs  plugin.rs  promotion.rs  raw_plugin.rs  raw_storage.rs  raw_value.rs  registry.rs  schema_registry.rs  semantic.rs  source_family.rs  state.rs  type_inference.rs
crates/source-aemo-dvd/: Cargo.toml
crates/source-aemo-dvd/src/: lib.rs
crates/source-aemo-metadata/: Cargo.toml
crates/source-aemo-metadata/src/: catalog.rs  discovery.rs  fetch.rs  lib.rs  mms_parser.rs  seed_concepts.rs
crates/source-nemweb/: Cargo.toml
crates/source-nemweb/src/: discover.rs  families.rs  fetch.rs  ingest.rs  lib.rs  parse.rs
crates/sources/source-aemo-docs/: Cargo.toml
crates/sources/source-aemo-dvd/: Cargo.toml
crates/sources/source-aemo-metadata/: Cargo.toml
crates/sources/source-mmsdm/: Cargo.toml
crates/sources/source-mmsdm-data/: Cargo.toml
crates/sources/source-mmsdm-meta/: Cargo.toml
crates/sources/source-mmsdm-meta/src/: lib.rs
crates/sources/source-nemweb/: Cargo.toml
crates/sources/source-nemweb-data/: Cargo.toml
dagster/energyhistorian_dagster/: __init__.py  assets.py  defs.py
data/: catalog.json
data/schema_registry/: nemweb.schemas.json
deploy/: clickhouse-config.xml
deploy/helm/energyhistorian/: Chart.yaml  values.yaml
docs/: aemo-metadata-ingestion.md  nemweb-starting-point.md  next-steps-handoff.md  production-rust-service.md  rename-source-plugins.md  repo-scaffold.md  schema-evolution-strategy.md  service-first-architecture.md
docs/platform/: k3s-control-plane.md
libs/controlplane/: Cargo.toml
libs/controlplane/src/: config.rs  db.rs  health.rs  lib.rs  schema.rs
libs/ingest-core/: Cargo.toml
libs/ingest-core/src/: lib.rs  plugin.rs  raw_storage.rs  schema.rs  semantic.rs  type_inference.rs
libs/runtime/: Cargo.toml
libs/runtime/src/: clickhouse.rs  lib.rs  object_store.rs  queue.rs  semantic.rs  services.rs  source_registry.rs
libs/source-aemo-dvd/: Cargo.toml
libs/source-aemo-dvd/src/: lib.rs
libs/source-aemo-metadata/src/: lib.rs  parse.rs  seed_reference.rs
libs/source-mmsdm/: Cargo.toml
libs/source-mmsdm/src/: lib.rs
libs/source-nemweb/src/: lib.rs  parse.rs
markdown/: aemo-market-questions.md
reports/ask_nem/me/: answer.json  query.sql  report.md
reports/ask_nem/smoke-test/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/smoke-test-3/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/smoke-test-gpt5mini/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/smoke-test-gpt5mini-v2/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/smoke-test-live-registry/: answer.json  report.md
reports/ask_nem/smoke-test-logging/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/two/: answer.json  chart.html  query.sql  report.md  results.csv
reports/ask_nem/victoria-energy-by-type/: answer.json  query.sql  report.md  results.csv
reports/ask_nem/victoria-energy-by-type-v2/: answer.json  chart.html  query.sql  report.md  results.csv
reports/ask_nem/victoria-energy-by-type-v3/: answer.json  chart.html  query.sql  report.md  results.csv
reports/ask_nem/victoria-energy-by-type-v4/: answer.json  chart.html  query.sql  report.md  results.csv
reports/ask_nem/victoria-energy-by-type-v5/: answer.json  chart.html  query.sql  report.md  results.csv
reports/nem_questions/: README.md  index.csv
reports/nem_questions/how-accurate-was-the-5-minute-pre-dispatch-price-forecast/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-correlated-are-prices-between-adjacent-regions/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-did-actual-interconnector-flows-compare-to-limits-during-peak-demand/: query.sql  report.md  spec.json
reports/nem_questions/how-did-generators-change-their-bids-day-over-day/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-did-the-dispatch-engine-s-solution-quality-change-over-the-last-30-days/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-do-battery-bid-prices-compare-to-gas-peaker-bid-prices/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-do-interconnector-flows-correlate-with-price-differentials/: query.sql  report.md  results.csv  spec.json
reports/nem_questions/how-does-actual-generation-compare-to-pasa-forecast-by-fuel-type/: query.sql  report.md  results.csv  spec.json
run/: service-sessions.txt
scripts/: ask_nem.py  nem_question_reports.py  provision_clickhouse_users.sh
src/: clickhouse.rs  db.rs  health.rs  lib.rs  main.rs  orchestrator.rs  plugin_harness.rs  semantic.rs  source_registry.rs
tests/: plugin_harness_smoke.rs
(+491 files in other folders)
