[project]
name = "energyhistorian-dagster"
version = "0.1.0"
description = "Dagster orchestration for Rust-based NEMweb ingestion."
requires-python = ">=3.11"
dependencies = [
  "dagster>=1.11,<1.12",
  "dagster-webserver>=1.11,<1.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "dagster"}

[tool.setuptools.packages.find]
where = ["dagster"]

[tool.dagster]
module_name = "energyhistorian_dagster.defs"
code_location_name = "energyhistorian"
