[package]
name = "energyhistoriand"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ingest-core = { path = "../../libs/ingest-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
source-aemo-dvd = { path = "../../libs/source-aemo-dvd" }
source-aemo-metadata = { path = "../../libs/source-aemo-metadata" }
source-nemweb = { path = "../../libs/source-nemweb" }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
