[package]
name = "source-mmsdm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
ingest-core = { path = "../ingest-core" }
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
sha2 = "0.10"
source-nemweb = { path = "../source-nemweb" }
